--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "pafy"]
 	path = pafy
 	url = https://github.com/np1/pafy.git
+[submodule "vlc"]
+	path = vlc
+	url = https://github.com/geoffsalmon/vlc-python.git
