conf for local extensions

--- a/youtupi.conf
+++ b/youtupi.conf
@@ -2,5 +2,6 @@
 	"local-folders": [
 		"~"
 	],
+	"local-search-extensions": [".avi", ".mp4", ".mp3", ".ogg", ".mkv", ".flv"],
 	"download-folder": "~/Downloads"
 }
