--- a/youtupi.conf.example
+++ b/youtupi.conf.example
@@ -3,5 +3,6 @@
 		"~"
 	],
 	"local-search-extensions": [".avi", ".mp4", ".mp3", ".ogg", ".mkv", ".flv"],
-	"download-folder": "~/Downloads"
+	"download-folder": "~/Downloads",
+	"base-volume" : -18
 }
