--- a/youtupi.conf.example
+++ b/youtupi.conf.example
@@ -2,7 +2,9 @@
 	"local-folders": [
 		"~"
 	],
-	"local-search-extensions": [".avi", ".mp4", ".mp3", ".ogg", ".mkv", ".flv"],
+	"local-search-extensions": [".avi", ".mpg", ".mp4", ".mp3", ".mov", ".ogg", ".ogm", ".mkv", ".flv"],
 	"download-folder": "~/Downloads",
-	"base-volume" : -18
+	"base-volume" : -18,
+	"port": 8080,
+	"host": '0.0.0.0'
 }
